# blind-deblurring-from-synthetic-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml
scripts/: configuration.py  infer.py  interactive_inference_natural.py  interactive_inference_synthetic.py  metrics_analyzis.ipynb  quantitative_results.ipynb  remote_training.py  remote_training_template.ipynb  save_deadleaves.py  train.py
src/rstor/: properties.py  utils.py
src/rstor/analyzis/: interactive_inference.py  metrics_plots.py  parser.py
src/rstor/analyzis/interactive/: crop.py  degradation.py  images.py  inference.py  metrics.py  model_selection.py  pipelines.py
src/rstor/architecture/: base.py  convolution_blocks.py  nafnet.py  selector.py  stacked_convolutions.py
src/rstor/data/: augmentation.py  dataloader.py  degradation.py  stored_images_dataloader.py  synthetic_dataloader.py
src/rstor/learning/: experiments.py  experiments_definition.py  loss.py  metrics.py  perceptual.py
src/rstor/synthetic_data/: color_sampler.py  dead_leaves.py  dead_leaves_cpu.py  dead_leaves_gpu.py  dead_leaves_sampler.py
src/rstor/synthetic_data/interactive/: interactive_dead_leaves.py
test/: test_dataloader.py  test_dataloader_gpu.py  test_dataloader_stored.py  test_dead_leaves.py  test_gpu_vs_cpu_dataloader.py  test_metrics.py  test_nafnet.py  test_stacked_convolutions.py  test_unet.py
