[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "rstor"
version = "0.0.0"
authors = [
  { name="Balthazar Neveu", email="balthazarneveu@gmail.com" },
  { name="Jamy Lafenetre", email="jamy.lafenetre@ens-paris-saclay.fr" },
]
description = "Deep image restoration based on learning from synthetic data"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/balthazarneveu/blind-deblurring-from-synthetic-data"
"Bug Tracker" = "https://github.com/balthazarneveu/blind-deblurring-from-synthetic-data/issues"